# bundles

./: Cargo.toml  README.md
home-assistant/: Cargo.toml
home-assistant/src/: main.rs
personal-assistant/: Cargo.toml  config.json
personal-assistant/src/: main.rs
rpg/: Cargo.toml
rpg/src/: main.rs
teacher/: Cargo.toml
teacher/src/: main.rs
