[package]
name = "personal-assistant"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
synapto.workspace = true
synapto-interface.workspace = true
synapto-test.workspace = true
tokio.workspace = true
datadir-local.workspace = true
prompt-file.workspace = true

host-audio.workspace = true
clock.workspace = true
mcp.workspace = true
stt-google.workspace = true
tts-google.workspace = true
