[package]
name = "rpg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
synapto.workspace = true
synapto-test.workspace = true
tokio.workspace = true
datadir-local.workspace = true
prompt-file.workspace = true

host-audio.workspace = true
clock.workspace = true
tts-google.workspace = true
speaker-recognizer.workspace = true

stt-speechmatics = { package = "synapto-plugin-stt-speechmatics", path = "../../integrations/plugins/stt-speechmatics" }
